--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,16 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
+    <TextView
+    	android:id="@+id/object"
+    	android:layout_width="fill_parent" 
+        android:layout_height="wrap_content"
+        android:text="You should not see this"
     />
+    <ListView 
+    	android:id="@id/android:list"
+		android:layout_width="fill_parent" 
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:drawSelectorOnTop="false"/>
 </LinearLayout>
