--- a/res/layout/method.xml
+++ b/res/layout/method.xml
@@ -9,6 +9,7 @@
   	android:id="@+id/name"
   	android:layout_width="fill_parent"
   	android:layout_height="wrap_content"
+  	android:textStyle="bold"
   />
   <TextView
   	android:id="@+id/result_type"
