--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,12 +4,26 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <TextView
-    	android:id="@+id/object"
-    	android:layout_width="fill_parent" 
-        android:layout_height="wrap_content"
-        android:text="You should not see this"
-    />
+    <LinearLayout
+    	android:orientation="vertical"
+    	android:layout_width="fill_parent"
+    	android:layout_height="wrap_content"
+    >
+	    <TextView
+	    	android:id="@+id/object"
+	    	android:layout_width="fill_parent" 
+	        android:layout_height="wrap_content"
+	        android:text="You should not see this"
+	        android:textStyle="bold"
+	        android:textAppearance="?android:attr/textAppearanceMedium"
+	    />
+	    <TextView
+	    	android:id="@+id/clazz"
+	    	android:layout_width="fill_parent" 
+	        android:layout_height="wrap_content"
+	        android:text="You should not see this"
+	    />
+	</LinearLayout>
     <ListView 
     	android:id="@id/android:list"
 		android:layout_width="fill_parent" 
