--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -27,10 +27,10 @@
 	        android:background="#ffffff"
 	    />
 	</LinearLayout>
-    <ListView 
+    <ExpandableListView 
     	android:id="@id/android:list"
 		android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:drawSelectorOnTop="false"/>
+	/>
 </LinearLayout>
