--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,6 +8,7 @@
     	android:orientation="vertical"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
+    	android:layout_weight="1"
     >
 	    <TextView
 	    	android:id="@+id/object"
@@ -17,6 +18,7 @@
 	        android:textStyle="bold"
 	        android:textAppearance="?android:attr/textAppearanceMediumInverse"
 	        android:background="#ffffff"
+	        android:maxHeight="100dip"
 	    />
 	    <TextView
 	    	android:id="@+id/clazz"
@@ -31,6 +33,7 @@
     	android:id="@id/android:list"
 		android:layout_width="fill_parent" 
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="4"
+        android:minHeight="300dip"
 	/>
 </LinearLayout>
