--- a/res/layout/item.xml
+++ b/res/layout/item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="wrap_content"
+  android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:orientation="horizontal"
 >
@@ -35,5 +35,7 @@
 		android:layout_width="wrap_content"
 	  	android:layout_height="wrap_content"
 	  	android:adjustViewBounds="true"
+	  	android:layout_gravity="center"
+	  	android:layout_weight="1"
 	/>
 </LinearLayout>
