refactored object layout into its own file

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,30 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <LinearLayout
-    	android:orientation="vertical"
-    	android:layout_width="fill_parent"
-    	android:layout_height="wrap_content"
-    >
-	    <TextView
-	    	android:id="@+id/object"
-	    	android:layout_width="fill_parent" 
-	        android:layout_height="wrap_content"
-	        android:text="You should not see this"
-	        android:textStyle="bold"
-	        android:textAppearance="?android:attr/textAppearanceMediumInverse"
-	        android:background="#ffffff"
-	        android:maxHeight="100dip"
-	    />
-	    <TextView
-	    	android:id="@+id/clazz"
-	    	android:layout_width="fill_parent" 
-	        android:layout_height="wrap_content"
-	        android:text="You should not see this"
-	        android:textAppearance="?android:attr/textAppearanceMediumInverse"
-	        android:background="#ffffff"
-	    />
-	</LinearLayout>
+    <include layout="@layout/object"/>
     <ExpandableListView 
     	android:id="@id/android:list"
 		android:layout_width="fill_parent" 
